[gd_scene load_steps=2 format=3 uid="uid://c2xbxh08iy3pr"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_qh38r"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_qh38r")

[node name="InstructionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "INSTRUCTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "TIME: 150.0s"
horizontal_alignment = 2

[node name="ChaosLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "CHAOS: LOW (0%)"

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "SUCCESS!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YouWonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="YouWonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="YouWonPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "YOU WON!"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="YouWonPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="YouWonPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "MAIN MENU"
